--- a/spring-mvc3/src/main/resources/templates/confirm.html
+++ b/spring-mvc3/src/main/resources/templates/confirm.html
@@ -1,10 +1,51 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
+<title>Title</title>
 </head>
-<body>
-
+<body class="bg-light">
+	<div class="container">
+		<div class="row justify-content-center">
+			<div class="col-md-8">
+				<h4 class="border-bottom my-3">
+				</h4>
+				
+				<p class="text-danger" th:text="#{confirmationMessage}">
+				</p>
+				
+				<div th:object="${invoice}">
+					<div class="mb-3">
+						<label for="name" th:text="#{name}"></label>
+						<input type="text" class="form-control" th:field="*{name}" disabled>
+					</div>
+					
+					<div class="mb-3">
+						<label for="address" th:text="#{address}"></label>
+						<input type="text" class="form-control" th:field="*{address}" disabled>
+					</div>
+					
+					<div class="mb-3">
+						<label for="phoneNumber" th:text="#{phoneNumber}"></label>
+						<input type="tel" class="form-control" th:field="*{phoneNumber}" disabled>
+					</div>
+					
+					<div class="mb-3">
+						<label for="price" th:text="#{price}"></label>
+						<input type="text" class="form-control" th:field="*{price}" disabled>
+					</div>
+					
+					<div class="mb-3">
+						<label for="paymentdeadline" th:text="#{paymentdeadline}"></label>
+						<input type="date" class="form-control" th:field="*{paymentdeadline}" disabled>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<script th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}">
+	</script>
 </body>
 </html>
